--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "homepage": "https://kutay.celebi.github.io/vcard",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kutay-celebi/vcard.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "pages": "sh deploy.sh"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueuse/head": "^1.3.1",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5",
-    "@vueuse/head": "^1.3.1"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
