change github workflow to manual trigger

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,7 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches:
-      - main # veya master, hangisini kullanıyorsanız
+  workflow_dispatch:
 
 permissions:
   contents: write
